GET /resourcesにgroupでの検索追加
